refactor: NEW_POST_REQUEST 상수 관리 객체 변경